# backend/docs/swagger.json
@@ -16,12 +16,11 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Sign Up",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.SingUpResp"
+                            "$ref": "#/definitions/auth.SingUpResp"
                         }
                     },
                     "400": {
@@ -29,6 +28,35 @@
                     },
                     "401": {
                         "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/api/links/to": {
+            "get": {
+                "description": "Link redirect ( for stat )",
+                "tags": [
+                    "Links"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "the link to which the redirect will be made",
+                        "name": "link",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "the page from which the link was clicked",
+                        "name": "page",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
@@ -45,12 +73,11 @@
                 "tags": [
                     "Projects"
                 ],
-                "summary": "Get list  Projects",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ProjectsResp"
+                            "$ref": "#/definitions/projects.ProjectsResp"
                         }
                     },
                     "400": {
@@ -71,7 +98,6 @@
                 "tags": [
                     "Projects"
                 ],
-                "summary": "Get information about the project by id",
                 "parameters": [
                     {
                         "type": "string",
@@ -91,7 +117,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.ProjectResponse"
+                            "$ref": "#/definitions/projects.ProjectResponse"
                         }
                     },
                     "400": {
@@ -115,7 +141,6 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "Get statistics by link",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -138,7 +163,6 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "Get project statistics",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -147,7 +171,7 @@
                             "additionalProperties": {
                                 "type": "array",
                                 "items": {
-                                    "$ref": "#/definitions/models.ProjectsStats"
+                                    "$ref": "#/definitions/stat.ProjectsStats"
                                 }
                             }
                         }
@@ -167,7 +191,6 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "Updating the statistics of visits to the project",
                 "parameters": [
                     {
                         "type": "string",
@@ -196,7 +219,6 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "add a visit",
                 "parameters": [
                     {
                         "type": "integer",
@@ -216,7 +238,7 @@
                     "200": {
                         "description": "Successful registration of the session and return of the session ID",
                         "schema": {
-                            "$ref": "#/definitions/models.SessionResponse"
+                            "$ref": "#/definitions/stat.SessionResponse"
                         }
                     },
                     "400": {
@@ -237,7 +259,6 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "Extending the time spent on the site",
                 "parameters": [
                     {
                         "type": "string",
@@ -269,12 +290,11 @@
                 "tags": [
                     "Stat"
                 ],
-                "summary": "Get session statistics",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.VisitsResponse"
+                            "$ref": "#/definitions/stat.VisitsResponse"
                         }
                     }
                 }
@@ -282,93 +302,119 @@
         }
     },
     "definitions": {
-        "models.ProjectResponse": {
+        "auth.SingUpResp": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "description": "token for authorization",
+                    "type": "string"
+                }
+            }
+        },
+        "projects.ProjectResponse": {
             "type": "object",
             "properties": {
                 "cards": {
+                    "description": "Project's card",
                     "type": "string"
                 },
                 "categories": {
+                    "description": "Category ids",
                     "type": "array",
                     "items": {
                         "type": "number"
                     }
                 },
                 "description": {
+                    "description": "Project's description",
                     "type": "string"
                 },
                 "features": {
+                    "description": "Project's features",
                     "type": "string"
                 },
                 "id": {
+                    "description": "Project's id",
                     "type": "string"
                 },
                 "photos": {
+                    "description": "Project's photos",
                     "type": "array",
                     "items": {
                         "type": "number"
                     }
                 },
                 "subtitle": {
+                    "description": "Project's subtitle",
                     "type": "string"
                 },
                 "title": {
+                    "description": "Project's title",
                     "type": "string"
                 },
                 "url": {
+                    "description": "url preview",
                     "type": "string"
                 }
             }
         },
-        "models.ProjectsResp": {
+        "projects.ProjectsResp": {
             "type": "object",
             "properties": {
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.ProjectsResponse"
+                        "$ref": "#/definitions/projects.ProjectsResponse"
                     }
                 }
             }
         },
-        "models.ProjectsResponse": {
+        "projects.ProjectsResponse": {
             "type": "object",
             "properties": {
                 "categories": {
+                    "description": "Category ids",
                     "type": "array",
                     "items": {
                         "type": "number"
                     }
                 },
                 "id": {
+                    "description": "Project's id",
                     "type": "string"
                 },
                 "subtitle": {
+                    "description": "Project's subtitle",
                     "type": "string"
                 },
                 "title": {
+                    "description": "Project's title",
                     "type": "string"
                 },
                 "url": {
+                    "description": "Url preview",
                     "type": "string"
                 }
             }
         },
-        "models.ProjectsStats": {
+        "stat.ProjectsStats": {
             "type": "object",
             "properties": {
                 "count": {
+                    "description": "Count visits",
                     "type": "integer"
                 },
                 "date": {
+                    "description": "Date",
                     "type": "string"
                 },
                 "uuid": {
+                    "description": "Project Id",
                     "type": "string"
                 }
             }
         },
-        "models.SessionResponse": {
+        "stat.SessionResponse": {
             "type": "object",
             "properties": {
                 "session": {
@@ -376,15 +422,7 @@
                 }
             }
         },
-        "models.SingUpResp": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.SiteStats": {
+        "stat.SiteStats": {
             "type": "object",
             "properties": {
                 "avg_time_on_site": {
@@ -438,12 +476,12 @@
                     "description": "Full statistics of visits by users",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.VisitsDetails"
+                        "$ref": "#/definitions/stat.VisitsDetails"
                     }
                 }
             }
         },
-        "models.Visits": {
+        "stat.Visits": {
             "type": "object",
             "properties": {
                 "browser": {
@@ -488,7 +526,7 @@
                 }
             }
         },
-        "models.VisitsDetails": {
+        "stat.VisitsDetails": {
             "type": "object",
             "properties": {
                 "date": {
@@ -499,16 +537,16 @@
                     "description": "Details",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/models.Visits"
+                        "$ref": "#/definitions/stat.Visits"
                     }
                 }
             }
         },
-        "models.VisitsResponse": {
+        "stat.VisitsResponse": {
             "type": "object",
             "properties": {
                 "data": {
-                    "$ref": "#/definitions/models.SiteStats"
+                    "$ref": "#/definitions/stat.SiteStats"
                 }
             }
         }
